# cap-api-scheduler

./: .gitignore  CMakeLists.txt  README.md  build.sh
cap/: CMakeLists.txt  build.sh  cap_description.in  config.json  reader.conf  start
cap/cmake/: armv7l.toolchain
src/: CMakeLists.txt  api_client.cpp  api_client.h  config.cpp  config.h  main.cpp  util.h
